refactor: 클래스의 역할에 맞게 매서드 위치 이동
- 게임 결과 계산 메서드 위치 이동