@@ -1,16 +1,14 @@
 package domain;
 
 import except.BlackJackException;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BlackjackGame {
 
     private final int MIN_PEOPLE_WITHOUT_DEALER = 1;
     private final int MAX_PEOPLE_WITHOUT_DEALER = 7;
-    private final String INVALID_BLACKJACK_PLAYER_SIZE = "블랙잭은 1-7명만 이용하실 수 있습니다";
+    private final String INVALID_BLACKJACK_PLAYER_SIZE = "블랙잭은 1-7명만 이용하실 수 있습니다.";
 
     private final BlackjackParticipants blackjackParticipants;
     private final BlackjackDeck deck;
@@ -37,29 +35,12 @@ public class BlackjackGame {
         drawDealerCard();
     }
 
-    public List<BlackjackResult> currentPlayerBlackjackResult() {
-        List<BlackjackResult> blackjackResults = new ArrayList<>();
-        for (String name : blackjackParticipants.getPlayerNames()) {
-            List<TrumpCard> trumpCards = blackjackParticipants.playerCards(name);
-            int sum = blackjackParticipants.calculateCardSum(name);
-            blackjackResults.add(new BlackjackResult(name, trumpCards, sum));
-        }
-        return Collections.unmodifiableList(blackjackResults);
-    }
-
-    public BlackjackResult currentDealerBlackjackResult() {
-        List<TrumpCard> trumpCards = blackjackParticipants.dealerCards();
-        int sum = blackjackParticipants.calculateDealerSum();
-        String name = blackjackParticipants.dealerName();
-        return new BlackjackResult(name, trumpCards, sum);
-    }
-
     public List<TrumpCard> playerCards(String name) {
-        return Collections.unmodifiableList(blackjackParticipants.playerCards(name));
+        return blackjackParticipants.playerCards(name);
     }
 
     public TrumpCard dealerCardFirst() {
-        return dealerCards().get(0);
+        return dealerCards().getFirst();
     }
 
     public List<TrumpCard> dealerCards() {
@@ -94,5 +75,13 @@ public class BlackjackGame {
 
     public boolean dealerDrawable() {
         return blackjackParticipants.dealerDrawable();
+    }
+
+    public List<BlackjackResult> currentPlayerBlackjackResult() {
+        return blackjackParticipants.calculatePlayerResults();
+    }
+
+    public BlackjackResult currentDealerBlackjackResult() {
+        return blackjackParticipants.calculateDealerResult();
     }
 }
